notebook update ::stoped at ex 7/9 conclusion

--- a/Projeto1.ipynb
+++ b/Projeto1.ipynb
@@ -2283,7 +2283,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercício 8"
+    "## Exercício 8\n",
+    "\n",
+    "Este exercício propõem a análise da distribuição dos caminhos mínimos das redes dadas do exercício anterior."
    ]
   },
   {
@@ -2316,6 +2318,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a) E-road network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -2343,7 +2352,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usando uma rede do facebook menor para o exercício:"
+    "### b) Facebook user-user friendships\n",
+    "##### Usando uma sub-rede do facebook menor para o exercício:"
    ]
   },
   {
@@ -2373,6 +2383,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Network science"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -2394,6 +2411,13 @@
     "#obtaining the giant component from this network\n",
     "netscience = max(nx.connected_component_subgraphs(netscience), key=len)\n",
     "plot_short_path_dist(netscience)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d) Hamsterster friendships"
    ]
   },
   {
@@ -2424,7 +2448,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercício 7 e 9:\n"
+    "Pode-se notar que, pela distribuição de probabilidade dos menores caminhos, tem-se uma maior probabilidade para caminhos que possuem distâncias próximas ao primeiro quartil da amostra de distâncias.\n",
+    "Esta propriedade da distribuição demonstra uma boa conectividade da rede, uma vez que com caminhos menores é possível se alcançar diversos nós."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercício 7 e 9:\n",
+    "\n",
+    "Este exercício propõe a análise das métricas das redes dadas. \n",
+    "Foram agrupados os exercícios 7 e 9, pois ambos propõe esta ideia.\n",
+    "\n",
+    "Para está análise, será criada uma tabela de métricas por rede dada.\n",
+    "As redes analisadas são:\n",
+    "<ul>\n",
+    "    <li>E-road network</li>\n",
+    "    <li>Facebook user-user friendships</li>\n",
+    "    <li> A coauthorship network among scientists working on network science, from 2006.</li>\n",
+    "    <li>Hamsterster friendships</li>\n",
+    "</ul>\n"
    ]
   },
   {
