--- a/Projeto1.ipynb
+++ b/Projeto1.ipynb
@@ -2638,14 +2638,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusão 7 e 9"
+    "Analisando a tabela resultado gerada, tira-se as seguintes conclusões:\n",
+    "<ul>\n",
+    "    <li><b>Quanto a complexidade:</b> analisando os termos $<k>$ e $<k^2>$ na razão $\\alpha = \\frac{k^2}{k}$, observa-se a proporção de variabilidade do grau da rede em relação a média de graus. Isto é, tem-se um resultado mais representativo do quanto a variância é significativa na rede. Caso esse valor seja alto (como para o Facebook e para Hamster), tem-se que a rede possui nós de diversos graus de conectividade e, portanto, a complexidade de caminhada pela rede pode ser impactada significativamente a depender do caminho escolhido. Caso contrário (como em E-road e Netscience), conclui-se que a rede possui uma boa organização e que o caminho escolhido, em geral, definirá uma ordem de complexidade aproximadamente igual aos outros caminhos. </li>\n",
+    "    <li><b>Quanto a Entropia da rede:</b> o resultado obtido disponibiliza diferentes conclusões para cada rede analisada. (i) para E-road, netscience e Hamsters, tem-se que a entropia cresce juntamente ao aumento do valor $\\alpha$; isto porque a rede não apresenta um viés de conectividade, sendo formada por interesses de otimização para caminhada e passagem de informação. (ii) já para o Facebook, pode-se concluir que a baixa entropia se deve à caracteristica enviesada da rede; isto é, pessoas muito conectadas se conectam com semelhantes e pessoas pouco conectas também. Observe que a análise da entropia de uma rede depende do estudo da complexidade, porém também de sua organização. Redes uniformes tendem a possuir comportamentos semelhantes à conclusão (i). Redes com viés, possuem um olhar parecido com a conclusão (ii).\n",
+    "    <li><b>Quanto a transitividade:</b> Essa métrica tem como proposta, dado 3 nós $u$, $v$ e $w$ com relações mútuas $(u,v)$ e $(v,w)$, representar a possibilidade de $u$ e $w$ também se relacionarem. Desta forma, analisam-se, basicamente, as triplas da rede: (i) para <i>Netscience</i> temos um coeficiente de clustering local e global alto, informando que provavelmente pesquisadores que colaboraram com o mesmo pesquisador, tende a colaborar entre si; (ii) A rede <i>E-road</i> apresenta valor de transitividade baixo, o que é importante para uma rede de estradas, pois, apesar da alta trasitividade diminuir a ocorrência de congestionamento, garantir e disponibilizar vias alternativas possui alto custo; (iii) já para o caso do Facebook e Hamsterster, ambos apresentam uma baixa transitividade (global e local), pois, por exemplo, amigo de um amigo seu não necessáriamente é conectado à você. </li>\n",
+    "    <li><b>Quanto a métrica de agrupamento:</b> o coeficiente local de agrupamento considera pesos uniformes para nós de graus distintos. Como as redes de analise possuem predominantemente graus baixos, espera-se que o coeficiente local possua viés para conexões de graus baixos. Já o coeficiente global analisa os possíveis números de triplas na redes e quais formam uma tripla totalmente conectada (i.e., um triangulo). Estes triangulos remove o viés para nós de menor grau, uma vez que estes formaram os triangulos com uma menor probabilidade.</li>\n",
+    "    <li><b>Quanto a distância:</b> analisando caso a caso (i) na rede <i>E-road</i> extraí-se uma informação importante e que corrobora com a ideia apresenta anteriormente de que há alto custo associado para criação de conexões diretas entre as cidades, sendo melhor investir em conexões indiretas (o que acarreta em um aumento na distância mínima média); (ii) quanto as redes sociais (Facebook e Hamterster), tem-se que com poucos passos é possível se alcançar diversos nós, apresentando um baixo caminho mínimo e diâmetro (<a href=https://en.wikipedia.org/wiki/Small-world_network>Small-world Network</a>); (iii) já na rede <i>Netscience</i> observa-se um maior valor para o caminho mínimo médio e um aumento do raio em coparação as redes sociais devido a uma característica do contexto, onde tem-se que autores pouco citados ou referênciados são pouco seguidos, porém se conectam com autores muito citados ou referênciados.</li>\n",
+    "</ul>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercício 10:"
+    "## Exercício 10:\n",
+    "\n",
+    "Este exercício propõe a análise métrica das redes de cidades (OSMnx) afim de gerar conclusões sobre estrutura e complexidade destas. As cidades analisadas são (a) London, (b) Paris, and (c) Berlin.\n",
+    "\n",
+    "### a) London"
    ]
   },
   {
@@ -2684,6 +2695,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b) Paris"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -2709,6 +2727,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Berlin"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -2731,6 +2756,14 @@
     "ox.plot_graph(BerlinNetwork)\n",
     "\n",
     "BerlinNetwork = nx.Graph(BerlinNetwork)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primeiramente, busca-se extrair as métricas associadas as redes e disponibilizar uma tabela para análise.\n",
+    "O script abaixo apresenta a tabela."
    ]
   },
   {
@@ -2860,6 +2893,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As distribuições de graus de conectividade podem ser observadas abaixo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -2926,11 +2966,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Analisando os resultados tem-se que:\n",
+    "<ul>\n",
+    "    <li>A transitividade é baixa analogamente à conclusão do exercício 9 para a rede <i>E-roads</i>.</li>\n",
+    "    <li>A análise de $\\alpha = \\frac{<k^2>}{<k>}$ e da entropia apresenta uma conclusão decorrente da análise de transitividade, pois tem-se redes menores (locais) projetas para a vasão de transito em centros urbanos (com caminhos alternativos), apresentando uma variância baixa e uma alta entropia (onde ruas de diferentes graus se conectam para apresentar os caminhos alternativos).</li>\n",
+    "</ul>\n",
+    "\n",
+    "Realizando um estudo com foco sobre a estrutura, tem-se que a base estrutural é dada pela ideia apresentada na análise de transitividade, valores de $\\alpha$ e da entropia. Contudo quando estudamos a distância média de menores caminhos, encontramos uma conclusão distinta e relacionada ao contexto de formação de cada centro.\n",
+    "<ul>\n",
+    "    <li>Para Londres, tem-se que o caminho mínimo é o menor entre os casos, pois estamos analisando somente o centro turístico da cidade tal que este precisa apresentar caminhos curtos para diversos pontos turisticos.</li>\n",
+    "    <li>Para Paris, tem-se que a formação e reforma do centro urbano pós peste negra (no século XIV) definiu a estrutura radial da rede. Essa estrutura possibilita uma maior vazão e conectividade de ruas principais ao centro da radial, diminuindo a distância mínima da rede, mas ainda facilitando o acesso da periferia ao centro (fato que difere pontualmente o mapa de Londres à este).</li> \n",
+    "    <li>Para Berlim, realizando a mesma análise histórica feita sobre París, com a assenção de governos/impérios militares a cidade iniciou a contrução de monumentos gigantes para registrar a história. Isto se reflete sobre a construção do trânsito e é apontado nesta análise. Observe que há a presença de vias com maior comprimento conectando pontos distântes de maneira direta. Este fato faz com que a distância mínima de pontos aumente em média e coloque a cidade como a de maior distância mínima média em comparação à Londres e Paris.</li>\n",
+    "</ul>\n",
+    "\n",
+    "Quanto a complexidade, tem-se Berlim como a rede mais complexa, onde o acesso de um ponto a outro possui um maior custo, principalmente dado pelos fatos apresentados anteriormente (vias longas conectando ponto a ponto).\n",
+    "\n",
+    "Quanto a facilidade de se encontrar um local de interesse nas redes apresentadas, tem-se París como melhor opção. Note que não se classificou Londres como a melhor, pois há uma amostra distinta de Paris e Berlim que apresentam o tráfego urbano completo (conectando periferia e centro da cidade).\n",
+    "\n",
+    "Ademais, é importante apontar que a alta probabilidade de ocorrência de nós de grau 1 nos gráficos de densidade se dá devido aos limites urbanos impostos. Idealmente, espera-se uma distribuição parecida ao gráfico apresentado pela rede </i>E-roads</i> só quecom uma média de graus menor."
+   ]
   }
  ],
  "metadata": {
