uploading html jupy and the project zips/pdfs

--- a/Projeto1.ipynb
+++ b/Projeto1.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Projeto 1 - Redes Complexas\n",
-    "### João Pedro Ramos Belmiro (9791198) e Matheus Aparecido do Carmo Alves (9791114)"
+    "### João Pedro Ramos Belmiro (9791198) e Matheus Aparecido do Carmo Alves (9791114)\n",
+    "<a href='redes_1.pdf' target='_blank'>Resolução do Exercício 1 à mão.</a>"
    ]
   },
   {
