uploading the modified project 2 - ex4

--- a/projeto2.ipynb
+++ b/projeto2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,47 +1400,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"4\">EX4</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vamos ler as redes novamente"
+    "## <a id=\"4\">EXERCÍCIO 4</a>\n",
+    "\n",
+    "Este exercício propõe a análise de algumas métricas além da aplicação do PCA para algumas redes dadas.\n",
+    "\n",
+    "Desta forma, o primeiro passo é carregar as redes dadas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "nan",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-c45a03d2aff3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mRdep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_pandas_edgelist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'from'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'to'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medge_attr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mRdep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRdep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_undirected\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mRdep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove_edges_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselfloop_edges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRdep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/networkx/classes/graph.py\u001b[0m in \u001b[0;36mremove_edges_from\u001b[0;34m(self, ebunch)\u001b[0m\n\u001b[1;32m   1078\u001b[0m                 \u001b[0;32mdel\u001b[0m \u001b[0madj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1079\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mu\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# self loop needs only one entry removed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1080\u001b[0;31m                     \u001b[0;32mdel\u001b[0m \u001b[0madj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1081\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1082\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medges\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: nan"
+     ]
+    }
+   ],
    "source": [
     "proteins = nx.Graph()\n",
-    "proteins = nx.read_edgelist(\"redes/human_proteins\", nodetype=int, comments='%')\n",
+    "proteins = nx.read_edgelist(\"Networks/human_proteins\", nodetype=int, comments='%')\n",
     "proteins = proteins.to_undirected()\n",
     "proteins.remove_edges_from(nx.selfloop_edges(proteins))\n",
     "\n",
     "power = nx.Graph()\n",
-    "power = nx.nx.read_gml('redes/power.gml', label=None)\n",
+    "power = nx.nx.read_gml('Networks/power.gml', label=None)\n",
     "power = power.to_undirected()\n",
     "power = nx.convert_node_labels_to_integers(power, first_label=0)\n",
     "power.remove_edges_from(nx.selfloop_edges(power))\n",
     "\n",
     "elegans07 = nx.Graph()\n",
-    "elegans07 = nx.read_edgelist(\"redes/wi2007.txt\", nodetype=str)\n",
+    "elegans07 = nx.read_edgelist(\"Networks/wi2007.txt\", nodetype=str)\n",
     "elegans07 = elegans07.to_undirected()\n",
     "elegans07 = nx.convert_node_labels_to_integers(elegans07, first_label=0)\n",
     "elegans07.remove_edges_from(nx.selfloop_edges(elegans07))\n",
     "\n",
     "elegans04 = nx.Graph()\n",
-    "elegans04 = nx.read_edgelist(\"redes/wi2004.txt\", nodetype=str)\n",
+    "elegans04 = nx.read_edgelist(\"Networks/wi2004.txt\", nodetype=str)\n",
     "elegans04 = elegans04.to_undirected()\n",
     "elegans04 = nx.convert_node_labels_to_integers(elegans04, first_label=0)\n",
     "elegans04.remove_edges_from(nx.selfloop_edges(elegans04))\n",
     "\n",
-    "df = pd.read_csv('redes/rdependencies.csv')\n",
-    "Rdep = nx.Graph()\n",
+    "df = pd.read_csv('Networks/rdependencies.csv')\n",
     "Rdep = nx.from_pandas_edgelist(df, source='from', target='to', edge_attr=None)\n",
     "Rdep = Rdep.to_undirected()\n",
     "Rdep.remove_edges_from(nx.selfloop_edges(Rdep))"
@@ -1448,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
