uploading the update project 2 - ex6-9

--- a/projeto2.ipynb
+++ b/projeto2.ipynb
@@ -1979,16 +1979,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "pip install sklearn"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 126,
    "metadata": {},
    "outputs": [
@@ -2052,7 +2042,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"5\">EX5</a>"
+    "## <a id=\"5\">EXERCÍCIO 5</a>\n",
+    "\n"
    ]
   },
   {
@@ -2083,13 +2074,6 @@
     "elegans_cc = max(nx.connected_component_subgraphs(elegans), key=len)\n",
     "airport_cc = max(nx.connected_component_subgraphs(airport), key=len)\n",
     "proteins_cc = max(nx.connected_component_subgraphs(proteins), key=len)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Função que calcula o Knn e plota os dados"
    ]
   },
   {
@@ -2319,6 +2303,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Realizando uma análise de coeficiente de assoratividade pode-se notar que todas as quatro redes apresentam o mesmo tipo de grau linear que realiza o fitting da relação Coef. Assortatividade x Coef. Pearson. A primeira rede apresenta uma relação linear positiva, mostrando que os nós se ligam com nós parceiros e estes ligam-se entre si (apresentando graus de conexão similares). Já as três seguintes apresentam relações negativas, mostrando que os nós tendem a se ligar com nós de graus distintos. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[Voltar para o topo](#lista)"
    ]
   },
@@ -2326,31 +2317,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"6\">EX6</a>"
+    "## <a id=\"6\">EXERCÍCIO 6</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primeiro vamos instalar o Louvain method com o seguinte comando:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "pip install python-louvain"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vamos criar a rede usando Givan-Newman benchmark "
+    "Para realizar este exercício, primeiro é necessário se criar uma rede usando <i>Givan-Newman benchmark</i>. "
    ]
   },
   {
@@ -2367,6 +2341,13 @@
     "minc = 32\n",
     "maxc = 32\n",
     "G = LFR_benchmark_graph(n = N, tau1 = tau1, tau2 = tau2, mu = mu, min_degree = k, max_degree = k, min_community=minc, max_community = maxc, seed = 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotando a rede criada tem-se:"
    ]
   },
   {
@@ -2390,6 +2371,13 @@
     "nx.draw(G, with_labels = False, nodecolor='r', edge_color='b', \n",
     "        node_size=50, font_size=16,  width=1,pos = pos)\n",
     "plt.show(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora, sugere-se a identificação de comunidades."
    ]
   },
   {
@@ -2514,7 +2502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"7\">EX7</a>"
+    "## <a id=\"7\">EXERCÍCIO 7</a>"
    ]
   },
   {
@@ -2614,7 +2602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"8\">EX8</a>"
+    "## <a id=\"8\">EXERCÍCIO 8</a>"
    ]
   },
   {
@@ -2654,6 +2642,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greedy = list(greedy_modularity_communities(G))\n",
+    "\n",
+    "communities = community.girvan_newman(G)\n",
+    "k = 2\n",
+    "for i in arange(0, k-1):\n",
+    "    next_level_communities = next(communities)\n",
+    "girvan = sorted(map(sorted, next_level_communities))\n",
+    "\n",
+    "label = community.label_propagation_communities(G)\n",
+    "   \n",
+    "partition = community_louvain.best_partition(G)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2664,14 +2671,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"9\">EX9</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Primeiro temos que ler as redes"
+    "## <a id=\"9\">EXERCÍCIO 9</a>\n",
+    "\n",
+    "Lendo as redes sugeridas."
    ]
   },
   {
@@ -2708,7 +2710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos calcular o número de nós, o grau médio, o coeficiente de assortatividade, e o tamanho médio do menor caminho."
+    "Calculando o número de nós, o grau médio, o coeficiente de assortatividade, e o tamanho médio do menor caminho."
    ]
   },
   {
@@ -2751,7 +2753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Antes precisamos criar os arquivos que contem a lista de arestas para serem lidos pelo programa que irá realizar os cálculos"
+    "Criando os arquivos que contem a lista de arestas que representam as redes para serem lidos pelo programa que irá realizar os cálculos"
    ]
   },
   {
