uploading the micanga code version

--- a/Projeto2.ipynb
+++ b/Projeto2.ipynb
@@ -2753,7 +2753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Criando os arquivos que contem a lista de arestas que representam as redes para serem lidos pelo programa que irá realizar os cálculos"
+    "Criando os arquivos que contem a lista de arestas que representam as redes para serem futuramente lidos a fim de realizar os calculos desejados."
    ]
   },
   {
@@ -2772,7 +2772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos agora calcular as modularidades, primeiro pelo método Fastgreedy"
+    "Calculando as modularidades pelo método Fastgreedy"
    ]
   },
   {
@@ -2787,13 +2787,6 @@
     "str_command4 = 'FastCommunity_GPL_v1.0.3/./FastCommunityMH -s -f ' + 'proteins' + '.pairs'\n",
     "\n",
     "fast = [os.system(str_command1 + ' -l firstRun'), os.system(str_command2 + ' -l firstRun'), os.system(str_command3 + ' -l firstRun'), os.system(str_command4 + ' -l firstRun')]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Com estes resultados obtemos a seguinte tabela:"
    ]
   },
   {
@@ -2899,7 +2892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"10\">EX10</a>"
+    "## <a id=\"10\">EXERCÍCIO 10</a>"
    ]
   },
   {
