uploading the finished Project4 - I do not save before last push hehe

--- a/Projeto4.ipynb
+++ b/Projeto4.ipynb
@@ -878,9 +878,9 @@
     "\n",
     "Este exercício propõe a construção de gráficos de fração de nós removidos em um SIR dinâmico versus uma medida de centralidade.\n",
     "\n",
-    "Serão testadas 7 medidas de centralidade listadas dentro do exercício.\n",
+    "Serão testadas 7 medidas de centralidade listadas dentro do exercício e 3 redes para aplicação do SIR.\n",
     "\n",
-    "Carregando as redes base para desenvolvimento do exercício."
+    "Portanto, o primeiro passo é carregar as redes base para desenvolvimento do exercício."
    ]
   },
   {
