Fixed header for project 3 and 4, also created html files for both

--- a/Projeto3.ipynb
+++ b/Projeto3.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>Projeto 3</center>\n",
-    "## <center>João Pedro Ramos Belmiro - 9791198 </center>\n",
-    "## <center>Matheus Aparecido do Carmo Alves - 9791114 </center>"
+    "# PROJETO 4\n",
+    "## Aluno 1: João Pedro Ramos Belmiro - 9791198  \n",
+    "## Aluno 2: Matheus Aparecido do Carmo Alves - 9791114"
    ]
   },
   {
